--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^8.0.0",
-    "vue-loader": "^16.8.1",
-    "vue-template-compiler": "^2.6.14",
     "react-refresh": "^0.14.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vue-loader": "^16.8.1",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "vue": "^3.2.19",
     "vue-router": "^4.4.0"
   }
